k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
spec:
  selector:
    app: flask-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
