k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-app-default-deny
  namespace: flask-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-app-allow-ingress
  namespace: flask-app
spec:
  podSelector:
    matchLabels:
      app: flask-app
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 5000

---
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-app-allow-egress-dns
  namespace: flask-app
spec:
  podSelector:
    matchLabels:
      app: flask-app
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-app-allow-egress-https
  namespace: flask-app
spec:
  podSelector:
    matchLabels:
      app: flask-app
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 443
